k8s/domains/capabilities/infra/api/overlays/ephemeral/capabilities-api-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: capabilities-api-depl
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: capabilities-api
