k8s/domains/capabilities/infra/api/overlays/ephemeral/capabilities-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: capabilities-api-public
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`api.tma.com`) && PathPrefix(`/v1/capabilities`)
      services:
        - name: capabilities-api-srv
          port: 3000
  tls: {}
